@@ -2,6 +2,9 @@ $Id$
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
+
+- fixed XSS vulnerability in graph.php
+
 - add ipv6 support for syslog destination
 
 - add ipv6 support for Diagnostics:Firewall States
